# agentic-rag

./: .gitignore  pyproject.toml
containerlab/: gnmic.yaml  prometheus.yml  telemetry-lab.clab.yml
kb/: openconfig_interfaces.md  srlinux_native_telemetry.md
notebooks/: debug.ipynb  evaluate_intent_llm.ipynb
src/: agent.py  graph.py  llm.py  main.py  prompts.py  schema.py  tools.py
